# blas-lapack

./: README  blas-lapack.cabal
Data/: Internal.hs
Data/Matrix/: Dense.hs  Generic.hs  Symmetric.hs
Data/Matrix/Dense/: Mutable.hs
Data/Matrix/Generic/: Mutable.hs
Data/Matrix/Symmetric/: Mutable.hs
Data/Vector/Storable/: Strided.hs
Data/Vector/Storable/Strided/: Mutable.hs
Numeric/: BLAS.hs
Numeric/BLAS/: Expression.hs  Internal.hs  Matrix.hs  Mutable.hs  Vector.hs
Numeric/BLAS/Matrix/: Dense.hs  Mutable.hs  Symm.hs
Numeric/BLAS/Matrix/Dense/: Mutable.hs
Numeric/BLAS/Mutable/: Unsafe.hs
Numeric/BLAS/Vector/: Mutable.hs
