Name:           blas-lapack
Version:        0.1
Synopsis:       Linear algebra for haskell which uses BLAS.
Description:
  High level binding to BLAS and LAPACK (not implemented yet). BLAS
  (Basic Linear Algebra Subprograms) are routines that provide
  standard building blocks for performing basic vector and matrix
  operations.
  .
  Below is general overview of package:
  .
  [@Data.*@]
  Data types for different matrices and another type of vector. API is
  modelled after @vector@ package.
  .
  [@Numeric.BLAS@]
  API for immutable vectors and matrices.
  .
  [@Numeric.BLAS.Mutable.*@]
  Thin wrapper over BLAS calls. It only insulates from raw pointers.
  Otherwise it's same BLAS.


Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/blas-lapack
Category:       Math,Numeric
Build-Type:     Simple

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/blas-lapack

Library
  Ghc-options:
    -Wall
  Build-Depends:
    base >=3 && <5,
    deepseq,
    primitive,
    vector,
    blas-bindings
  Exposed-modules:
    -- * Data types
    -- Vector
    Data.Vector.Storable.Strided
    Data.Vector.Storable.Strided.Mutable
    -- Matrix
    Data.Matrix.Generic
    Data.Matrix.Generic.Mutable
    Data.Matrix.Dense
    Data.Matrix.Dense.Mutable
    Data.Matrix.Symmetric
    Data.Matrix.Symmetric.Mutable
    -- High level BLAS interface
    Numeric.BLAS
    Numeric.BLAS.Mutable
    Numeric.BLAS.Mutable.Unsafe
  Other-modules:
    Data.Internal
